[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "asteroid-intercept-planner"
version = "2.0.0"
description = "SQLite-backed JPL close-approach catalog and Lambert transfer planner"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Matthew Cranny"}]
dependencies = [
  "Flask>=3.0,<4",
  "numpy>=2.0,<3",
  "python-dotenv>=1.0,<2",
  "requests>=2.31,<3",
]

[project.optional-dependencies]
desktop = ["PySide6>=6.8,<7"]
ephemeris = ["skyfield>=1.49,<2", "jplephem>=2.21,<3"]
dev = ["pytest>=8,<9", "ruff>=0.5,<1"]

[project.scripts]
asteroid-planner = "app.launcher:main"
asteroid-ingest = "app.ingest:main"
asteroid-web = "app.web:main"

[tool.setuptools]
packages = ["app", "scripts"]

[tool.setuptools.package-data]
app = ["schema.sql", "templates/*.html", "static/*.css"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
